# Forex_procrssor

./: (2).coverage  .coverage 2  .env.example  .gitignore  .mcp.json  CLAUDE.md  CLAUDE_JP.md  README.md  coverage(2).xml  git-workflow-manual.md  pyproject(2).toml  pyproject.toml  test_env_debug.py  test_mt5_advanced.py  test_mt5_debug.py
.claude/: settings.local.json  ultrathink.json
.claude/agents/: executor.md  git-commit-pusher.md  planner.md  qa-agent.md  reviewer.md
.claude/commands/: wf.md
.kiro/specs/Forex_procrssor/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: Python_Development_Guidelines.md  product.md  structure.md  tech.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  workflow_context.md
AI_Prompts/: documentation_generator.md  marimo_conversion_prompt.md  src_documentation.txt
AI_Prompts/Archive/: 重複issue
Archive_Docs/: plan.md
Archive_Docs/Phase1/: context.md  step2_implementation_plan.md
Archive_Docs/Phase2/task3/: context_task3.md
Archive_Docs/Phase2/task4/: task4_report.md
Archive_Docs/Phase2/task5/: context.md
Archive_Docs/Phase2/task6/: buffer_overflow_solution_plan.md  context.md
Archive_Docs/Phase3/task7/: context.md
Archive_Docs/plan/: plan.md
CLAUDEmd_archive/: CLAUDE.md.20250817
Report_Docs/: buffer_overflow_analysis_and_solutions.md  task1_implementation_report.md
docs/: context.md  plan.md  task5_implementation_summary.md
implementation_plan/incremental_phase1/: github_issue_mt5_dash.md
issues/common-infrastructure-enhancement/: implementation-summary.md  proposal.md
issues/mt5-connection-error/: analysis_and_solution.md  implementation_report.md
src/: __init__.py
src/app/: __init__.py
src/common/: __init__.py  config.py  error_handling.py  interfaces.py  logging_utils.py  memory_manager.py  models.py
src/data_processing/: __init__.py  indicators.py  pipeline.py  processor.py  rci.py
src/mt5_data_acquisition/: __init__.py  mt5_client.py  ohlc_fetcher.py  tick_adapter.py  tick_fetcher.py  tick_to_bar.py
src/patchTST_model/: __init__.py
src/production/: __init__.py
src/storage/: __init__.py
src_documentations/common/: config.py.md  interfaces.py.md  models.py.md
src_documentations/data_processing/: processor.py.md
src_documentations/mt5_data_acquisition/: mt5_client.py.md  ohlc_fetcher.py.md  tick_adapter.py.md  tick_fetcher.py.md  tick_to_bar.py.md
test_sandbox/task3_test_SANDBOX/: README.md  README_marimo.md  mt5_config_example.py  mt5_config_marimo_new.py  mt5_connection_sandbox.py  mt5_connection_sandbox_marimo_new.py  mt5_sandbox_with_config.py  mt5_sandbox_with_config_marimo_new.py
test_sandbox/task4_test_SANDBOX/: 01_basic_connection_test.py  02_real_time_tick_display.py  03_buffer_monitoring.py  04_error_recovery_test.py  05_marimo_dashboard.py  06_marimo_multi_symbol.py  README.md
test_sandbox/task5_test_SANDBOX/: 01_basic_ohlc_fetch.py  02_multi_timeframe_display.py  03_batch_fetch_monitor.py  04_missing_data_detector.py  05_comparison_with_ticks.py  06_marimo_ohlc_dashboard.py  README.md  buffer_overflow_explanation.md
test_sandbox/task6_test_SANDBOX/: 01_basic_test_simple.py  01_basic_tick_to_bar.py  01_basic_tick_to_bar_demo.py  02_realtime_bar_builder.py  03_multi_symbol_converter.py  04_gap_detection_test.py  06_marimo_bar_dashboard.py  README.md  test_mt5_connection.py  test_tick_format.py  test_tick_timezone.py
test_sandbox/task7_test_SANDBOX/: 01_polars_mt5_data_showcase.py  02_realtime_polars_processing.py  03_large_dataset_streaming.py  04_data_aggregation_pipeline.py  README.md  demo_config.py  demo_config.toml  display_helpers.py
test_sandbox/task9_task/: rci_realtime_chart.py  task9_config.toml  test_incomplete_bar.py  test_rci_fix.py
tests/: __init__.py  conftest.py
tests/common/: test_ohlc_model.py  test_prediction_alert_models.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_indicators_integration.py  test_tick_streaming.py  test_tick_streaming_simple.py  test_tick_to_bar_integration.py
tests/performance/: test_tick_performance_benchmark.py
tests/unit/: __init__.py  test_config.py  test_data_processor.py  test_differential_rci.py  test_indicators.py  test_interfaces.py  test_interfaces_coverage.py  test_memory_manager.py  test_models.py  test_mt5_client.py  test_ohlc_fetcher.py  test_rci.py  test_rci_engine.py  test_tick_adapter.py  test_tick_fetcher.py  test_tick_model(2).py  test_tick_model.py  test_tick_model_compatibility.py  test_tick_to_bar.py
(+24 files in other folders)
